<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorBackground"
    tools:context="com.example.dell.fiascov2.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_login_borderbg">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/login_logo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:src="@drawable/ic_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/login_form_container"
                android:padding="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_logo_container">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_email"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/robotolight"
                        android:textSize="17sp"
                        android:textColor="@color/colorText"
                        app:backgroundTint="@color/colorBorder"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/colorText"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorBorder"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_email_container">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/robotolight"
                        android:textSize="17sp"
                        android:textColor="@color/colorText"
                        app:backgroundTint="@color/colorBorder"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/ic_launcher_login_borderbg"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/hint_login_button"
                    android:textSize="17sp"
                    android:textColor="@color/colorText"
                    android:textAllCaps="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password_container"/>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/hint_login_forgot_password"
                    android:textSize="17sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login"/>

                <TextView
                    android:id="@+id/tv_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/hint_register_button"
                    android:textSize="17sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_forgot_password"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_forgot_password"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>